CODEOWNERS: Add code owner for drivers/osdp
Add myself (@cbsiddharth) as code owner for drivers/osdp/,
samples/drivers/osdp/ and includes/drivers/osdp.h.

Signed-off-by: Siddharth Chandrasekaran <siddharth@embedjournal.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -250,6 +250,7 @@
 /drivers/watchdog/wdt_handlers.c          @andrewboie
 /drivers/wifi/                            @jukkar @tbursztyka @pfalcon
 /drivers/wifi/eswifi/                     @loicpoulain
+/drivers/osdp/                            @cbsiddharth
 /dts/arc/                                 @vonhust @ruuddw @iriszzw
 /dts/arm/atmel/sam4e*                     @nandojve
 /dts/arm/atmel/samr21.dtsi                @benpicco
@@ -317,6 +318,7 @@
 /include/drivers/spi.h                    @tbursztyka
 /include/drivers/lora.h                   @Mani-Sadhasivam
 /include/drivers/peci.h                   @albertofloyd @franciscomunoz @scottwcpg
+/include/drivers/osdp.h                   @cbsiddharth
 /include/app_memory/                      @andrewboie
 /include/arch/arc/                        @vonhust @ruuddw
 /include/arch/arc/arch.h                  @andrewboie
@@ -392,6 +394,7 @@
 /samples/drivers/ht16k33/                 @henrikbrixandersen
 /samples/drivers/lora/                    @Mani-Sadhasivam
 /samples/drivers/counter/maxim_ds3231/    @pabigot
+/samples/drivers/osdp/                    @cbsiddharth
 /samples/net/                             @jukkar @tbursztyka @pfalcon
 /samples/net/dns_resolve/                 @jukkar @tbursztyka @pfalcon
 /samples/net/lwm2m_client/                @rlubos
